--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   },
   "dependencies": {
     "@microsoft/microsoft-graph-client": "^1.1.0",
+    "bluebird": "^3.5.1",
     "cookie-parser": "~1.4.3",
+    "createerror": "^1.3.0",
     "debug": "~2.6.9",
     "dotenv": "^6.0.0",
+    "email-templates": "^4.0.3",
     "emailjs": "^2.2.0",
     "express": "~4.16.0",
     "express-handlebars": "^3.0.0",
@@ -18,6 +21,7 @@
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.3.0",
     "morgan": "~1.9.0",
+    "nodemailer": "^4.6.8",
     "simple-oauth2": "^2.2.1"
   }
 }
