--- a/package.json
+++ b/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "node-tutorial",
-  "version": "0.0.0",
+  "name": "yoda-application",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "scrub": "rm -rf node_modules && npm install && nodemon"
   },
   "dependencies": {
-    "@microsoft/microsoft-graph-client": "^1.1.0",
-    "bluebird": "^3.5.1",
-    "cookie-parser": "~1.4.3",
-    "createerror": "^1.3.0",
-    "debug": "~2.6.9",
-    "dotenv": "^6.0.0",
-    "email-templates": "^4.0.3",
-    "emailjs": "^2.2.0",
-    "express": "~4.16.0",
-    "express-handlebars": "^3.0.0",
-    "handlebars-helpers": "^0.10.0",
-    "hbs": "~4.0.1",
-    "http-errors": "~1.6.2",
-    "jsonwebtoken": "^8.3.0",
-    "morgan": "~1.9.0",
-    "nodemailer": "^4.6.8",
-    "simple-oauth2": "^2.2.1"
+    "@microsoft/microsoft-graph-client": "1.1.0",
+    "cookie-parser": "1.4.3",
+    "debug": "2.6.9",
+    "dotenv": "6.0.0",
+    "express": "4.16.0",
+    "express-handlebars": "3.0.0",
+    "hbs": "4.0.1",
+    "jsonwebtoken": "8.3.0",
+    "simple-oauth2": "2.2.1"
   }
 }
