--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express-handlebars": "3.0.0",
     "hbs": "4.0.1",
     "jsonwebtoken": "8.3.0",
+    "passport": "0.4.0",
+    "passport-google-oauth2": "0.1.6",
     "simple-oauth2": "2.2.1"
   }
 }
