--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "8.3.0",
     "passport": "0.4.0",
     "passport-google-oauth2": "0.1.6",
+    "passport-microsoft": "0.0.5",
     "simple-oauth2": "2.2.1"
   }
 }
